# gismo

optional/motor/: CMakeLists.txt  README.md
optional/motor/filedata/geo/: Lshape_3patches.xml  beam.xml  beam_2patches.xml  cube.xml  exciting_blade.xml  ls89blade_pressure.xml  ls89blade_suction.xml  simpleScrew.xml  square.xml  unitCube.xml
optional/motor/filedata/jku/: Austria.txt  airPassageParameterization.xml  butterfly-points.xml  butterfly-template.xml  chair_stand_boundary_data.xml  chair_stand_multibasis.xml  points_target.txt  points_target_rectangle.txt  skrew_boundary_data.xml  skrew_boundary_surfaces.xml  target_extended_segmentation.xml  target_input.xml  target_input_offset.xml  target_multipatch.xml  target_rectangle.xml  target_segmentation.xml  tdm_target_multipatch.xml  tdm_template_multipatch.xml  tdm_thb_map.xml  template_geometry.xml  template_multipatch.xml  template_segmentation.xml  template_segmentation_points.xml  thb_map.xml  thb_parameters_and_points.xml  triangle_boundary_curves.xml  triangle_boundary_data.xml  triangle_segmentation.xml  triangle_topology.xml  tutorial_commands.txt  wavy_boundary_curves.xml  wavy_boundary_data.xml
optional/motor/filedata/uwb-pilsen/: Parameters_HydraulicProfile.txt  bladedomain.xml  bladedomain1.xml  bladedomain2.xml  bladedomain2_per.xml  configPrecondOptGamma.xml  configPrecondTest.xml  configPrecondTestTol.xml  designVariables.txt  fileSurfaceIn.xml  fileSurfaceOut.xml  initialGeometry.txt  initialGeometryStep.txt  initialGeometry_domain0.txt  initialGeometry_domain2.txt  initialGeometry_domain5.txt  initialSettings.txt  inputData.txt  (+14 more)
optional/motor/jku/: CMakeLists.txt  fitting_example2.cpp  gsAirfoilTest.cpp  gsAirfoilUtils.h  gsAuxFit.cpp  gsChangeCurveOrientation.cpp  gsCheckBoundaries.cpp  gsCheckJacobian.cpp  gsConvexHull.h  gsCoonsPatchConstruction.cpp  gsCrescendoTest.cpp  gsCrescendoUtils.h  gsDistanceMinimization.cpp  gsExtendSegmentation.cpp  gsFindClosestPoints.cpp  gsFitPoints.cpp  gsFittingUtils.h  gsGeometryToMultipatch.cpp  gsJoinMultipatches.cpp  gsMap.cpp  gsMapMultipatch.cpp  gsMinimizedLengthOffset.cpp  gsMotorIOUtils.h  gsMotorStokesRecipe.cpp  gsMotorUtils.h  gsMultipatchFitting.cpp  gsMultipatchFitting.h  gsMultipatchPlusGeometry.cpp  gsOffset.cpp  gsOffset.h  gsParameterLines.h  gsPeriodicFitting.cpp  gsPlotBoundaries.cpp  gsPlotCurvature.cpp  gsPlotCurve.cpp  gsPlotNormalAngles.cpp  gsPlotParameterLines.cpp  gsQualityMeasure2.cpp  gsQualityMeasure2.h  gsQualityMeasureTest.cpp  (+31 more)
optional/motor/src/: gsCompEulerAssembler_.cpp  gsCompNavStoAssembler_.cpp  uwbINSdgBlockVisitors_.cpp
optional/motor/tud/: CMakeLists.txt
optional/motor/uwb-pilsen/: CMakeLists.txt  uwb2DRFGeom_max.h  uwb2DRF_max7.h  uwbADRArtificialDiffusionVisitors.h  uwbADRAssemblerBase.h  uwbADRAssemblerLinear.h  uwbADRAssemblerNonlinear.h  uwbADRBlockAssembler.h  uwbADRBlockVisitors.h  uwbADRCrosswindVisitors.h  uwbADREvaluators.h  uwbADRNonconstCoefs.h  uwbADRNonconstCoefsProfile.h  uwbADRPde.h  uwbADRProblemSettings.h  uwbADRSUPGBlockVisitors.h  uwbADRSolverBase.h  uwbADRSolverExample.cpp  uwbADRSolverLinear.h  uwbADRSolverNonlinear.h  uwbADRSolverParams.h  uwbADRSolverUnsteady.h  uwbADRnonlinearSolverExample.cpp  uwbADRnonlinearSolverExampleProfile.cpp  uwbBladeProfile.h  uwbBladeProfileDomain2DTest.cpp  uwbBlockAssemblerBase.h  uwbCreateXML.cpp  uwbDataFileReader.h  uwbDraftTube.h  uwbGenerateMatrices.h  uwbGenerateMatricesProfile2D.h  uwbGenerateMatricesStep2D.h  uwbGeometryCreators.h  uwbGeometryProfile2D.h  uwbGeometryStep.h  uwbGeometryStep2D.h  uwbGeometryUtils.h  uwbHydraulicProfile.h  uwbINSAssemblerBase.h  (+120 more)
optional/unsupported/: .gitignore  CMakeLists.txt  README.md
optional/unsupported/cmake/: FindCFX5.cmake  gismo_devConfig.cmake.in  gsDevOptions.cmake  gsInstall-dev.cmake
optional/unsupported/doc/: CMakeLists.txt  Doxyfile.in  ExampleDoxygenPage.dox  addExampleDoc.sh  gismodoxy_layout.xml.in  tutorialRemappedBasis.dox  usergroup0.dox
optional/unsupported/examples/: CMakeLists.txt  CompressibleEuler.cpp  CompressibleEuler_AFC.cpp  ConstrainedL2.cpp  ConvDiff.cpp  ConvDiff_AFC.cpp  ConvDiff_AFC_Benchmark.cpp  ConvDiff_AFC_Benchmark2.cpp  ConvDiff_AFC_Benchmark2_test.cpp  ElectricMotorOpti_IETI.cpp  KKTPervertedPoissonRecipeAssembler.cpp  KKTPervertedPoissonRecipeAssembler3D.cpp  KKTPevertedPoisson.cpp  TimeDepConvDiff.cpp  TimeDepConvDiff_AFC_Benchmark.cpp  autoDiff_test.cpp  biharmonicModified.cpp  biharmonicMultigrid.cpp  biharmonic_example2.cpp  gnuplotTest.cpp  gsAiryStress_test.cpp  gsAssemblingSpeed.cpp  gsAssembly_test.cpp  gsBSplineRootsTest.cpp  gsBasisEvalTest2.cpp  gsBemConvergence_test.cpp  gsBoundaryGeometry_test.cpp  gsBoxSpline_test.cpp  gsC1BasisFunction.cpp  gsC1BasisFunction_playground.cpp  gsCDR_TrilinosML.cpp  gsCloningPtrTests.cpp  gsCombinat_test.cpp  gsCompareEval.cpp  gsCompareResults.cpp  gsComparisonTest.cpp  gsCompatibleStokesSolver_verification_test.cpp  gsCompositeBasis_AssemblerExamples.cpp  gsCompositeBasis_test.cpp  gsCompositeHBasis_AssemblerExamples.cpp  (+182 more)
optional/unsupported/filedata/: bathe_cylinder.xml  coarstest.xml  cylinder_strip.xml  four_cubes_nurbs.xml  half_annulusR1R5.xml  hyperbolic_paraboloid.xml  pinched_cylinder.xml  quarter_annulusR1R5.xml  quarter_annulus_1024p.xml  quarter_hemisphere.xml  scordelis_lo_roof.xml  square4patches.xml  square6patches.xml  square_with_hole.xml  thin_plate2.xml  torus.xml  twisted_quarter_annulus_1024p.xml  yeti3d_u21p.xml
optional/unsupported/optional/: CMakeLists.txt  gsCoDiPacktest.cpp  gsOptADtest.cpp  gsOptMasonry.cpp  gsOptParam.cpp  gsOptProblemExample.cpp  gsPastix_test.cpp
optional/unsupported/src/: CMakeLists.txt  gismo_dev.h
optional/unsupported/unittests/: CMakeLists.txt  gismo_unittest.h  gsBoxList.cpp  gsDomainMapIterator.cpp  gsDomainMap_test.cpp  gsExportMatrix_test.cpp  gsHTBasisDegreeElevate_test.cpp  gsMapFactoryDofMapper.cpp  gsMapFactoryFile.cpp  gsMapperL2G.cpp  gsMapperUtils.cpp  gsRemappedBasis.cpp  gsRemappedTHB.cpp  gsSelector.cpp  gsThbs_test_derivatives.cpp  gsWeightMapper.cpp  main.cpp
(+797 files in other folders)
